--- a/apps/site/src/_pages/legal/privacy/2_user-data-legal-requests.mdx
+++ b/apps/site/src/_pages/legal/privacy/2_user-data-legal-requests.mdx
@@ -37,7 +37,7 @@ Before asking us to disclose data, it may be useful to understand how our system
 
 - **Organizations** — _Organizations_ can contain one or more users, and they typically mirror real-world organizations, such as businesses or projects. They are administered by users and can contain both projects and teams of users.
 
-- **Accounts** — Every user and organization corresponds to a unique _account_. Projects and data can be stored within and 'owned by' an account, sometimes also called a 'namespace' or a 'workspace'. 
+- **Accounts** — Every user and organization corresponds to a unique _account_. Projects and data can be stored within and 'owned by' an account, sometimes also called a 'namespace' or a 'workspace'.
 
 - **Projects** — The term _project_ can be used to describe one or more entities, types, blocks, services, or other [Block Protocol Hub](/hub) listings. A project may contain one or more files (including documentation), as well as revision history and other metadata. Projects can have multiple collaborators and, at its administrators' discretion, may be publicly viewable or not.
 
@@ -52,24 +52,27 @@ There is a variety of information publicly available on the Block Protocol about
 **User profiles** can be found at a URL such as `https://blockprotocol.org/@username`. They display information about when the user created their account as well their public activity on the Block Protocol and social interactions.
 
 All user public profiles display:
+
 - Username
 - The repositories that the user has starred
 - The other Block Protocol users the user follows
 - The users that follow them
 
 **Public user profiles** can also include additional information that a user may have chosen to share publicly. This may include:
+
 - A user's real name
 - An avatar
 - An affiliated company
 - Their location
 - A public email address
 - A user's personal web page
-- Organizations to which the user is a member (*depending on either the organizations' or the users' preferences*)
+- Organizations to which the user is a member (_depending on either the organizations' or the users' preferences_)
 - Badges or awards the user has received
 
 ### Private account data
 
 The Block Protocol also collects and maintains certain private information about users as outlined in our [Privacy Statement](/legal/privacy). This may include:
+
 - Private email addresses
 - Payment details
 - Security access logs
@@ -80,11 +83,13 @@ The Block Protocol also collects and maintains certain private information about
 Information about organizations, their administrative users and repositories is publicly available on the Block Protocol.
 
 **Organization profiles** can be found at a URL such as `https://blockprotocol.org/@organization`. All organization profiles display:
+
 - The organization name
 - The repositories that the owners have starred
 - All Block Protocol users that are owners of the organization
 
 **Public organization profiles** can also include additional information that the owners have chosen to share publicly. This may include:
+
 - An avatar
 - An affiliated company
 - Their location
@@ -92,21 +97,24 @@ Information about organizations, their administrative users and repositories is 
 - Collaborators
 
 ### Public repository data
+
 You can browse almost any public repository to get a sense for the information that the Block Protocol collects and maintains about projects. This can include:
 
-  - The code or data itself
-  - Previous versions of the code or data
-  - Stable release versions of the project
-  - Information about collaborators, contributors and project members
-  - Logs of write/update operations, including branching, forking, cloning and extension of a project
-  - Conversations related to projects
-  - User-created project documentation
-  - Statistics and graphs showing contributions to the project and the network of contributors
+- The code or data itself
+- Previous versions of the code or data
+- Stable release versions of the project
+- Information about collaborators, contributors and project members
+- Logs of write/update operations, including branching, forking, cloning and extension of a project
+- Conversations related to projects
+- User-created project documentation
+- Statistics and graphs showing contributions to the project and the network of contributors
 
 ### Private repository data
+
 The Block Protocol collects and maintains the same type of data for private repositories that can be seen for public repositories, except only specifically invited users may access private repository data.
 
 ### Other data
+
 Additionally, the Block Protocol collects analytics data such as page visits and information occasionally volunteered by our users (such as communications with our support team, survey information and/or site registrations).
 
 ## We will notify any affected account owners
@@ -140,8 +148,8 @@ Please note that the information available will vary from case to case. Some of 
 
 We will not disclose account access logs unless compelled to do so by either:
 
-1. a court order issued under 18 U.S.C. Section 2703(d), upon a showing of specific and articulable facts showing that there are reasonable grounds to believe that the information sought is relevant and material to an ongoing criminal investigation; or
-1. a search warrant issued under the procedures described in the Federal Rules of Criminal Procedure or equivalent state warrant procedures, upon a showing of probable cause.
+1.  a court order issued under 18 U.S.C. Section 2703(d), upon a showing of specific and articulable facts showing that there are reasonable grounds to believe that the information sought is relevant and material to an ongoing criminal investigation; or
+1.  a search warrant issued under the procedures described in the Federal Rules of Criminal Procedure or equivalent state warrant procedures, upon a showing of probable cause.
 
 In addition to the non-public account information listed above, we can provide account access logs in response to a court order or search warrant, which may include:
 
