--- a/apps/site/src/_pages/legal/terms-corporate/0_index.mdx
+++ b/apps/site/src/_pages/legal/terms-corporate/0_index.mdx
@@ -15,6 +15,7 @@ topics:
 _These terms apply to Block Protocol users who have executed agreements in place referencing the [Corporate Terms of Service](/legal/terms-corporate). All other business or institution customers are directed to the standard [Block Protocol Terms of Service](/legal/terms)._
 
 ## Block Protocol Corporate Terms of Service
+
 Version Effective Date: February 28, 2023
 
 This Agreement applies to the following Block Protocol offerings, as further defined below (collectively, the **“Products”**):
@@ -64,7 +65,7 @@ This Agreement applies to the following Block Protocol offerings, as further def
 
 ## B. Account Terms
 
-### 1. Account Controls.
+### 1. Account Controls
 
 - **Users.** Customer acknowledges that Users retain ultimate administrative control over their individual accounts and the Content within them. The Standard [Block Protocol Terms of Service](/legal/terms) govern Users' use of the Service, except with respect to Users' activities under this Section B.
 - **Organizations.** Customer retains ultimate administrative control over any Organization created on Customer’s behalf and User-Generated Content posted to the projects within its Organization(s), subject to this Section B. This Section B will govern the use of Customer’s Organization(s).
@@ -149,11 +150,11 @@ The Block Protocol considers Customer Content in Customer’s Private Projects t
 
 ### 3. Access
 
-Block Protocol personnel may only access Customer's Private Projects in the situations described in our [Privacy Statement](/legal/privacy). 
+Block Protocol personnel may only access Customer's Private Projects in the situations described in our [Privacy Statement](/legal/privacy).
 
 Customer may choose to enable additional access to its Private Projects. For example, Customer may enable various Block Protocol services or features that require additional rights to Customer Content in Private Projects. These rights may vary depending on the service or feature, but the Block Protocol will continue to treat Customer Content in Customer’s Private Projects as Customer’s Confidential Information. If those services or features require rights in addition to those it needs to provide the Service, the Block Protocol will provide an explanation of those rights.
 
-Additionally, we may be [compelled by law](/legal/privacy#for-legal-disclosure) to disclose the contents of your private projects. 
+Additionally, we may be [compelled by law](/legal/privacy#for-legal-disclosure) to disclose the contents of your private projects.
 
 The Block Protocol will provide notice regarding our access to private project content, unless [for legal disclosure](/legal/privacy#for-legal-disclosure), to comply with our legal obligations, or where otherwise bound by requirements under law, for automated scanning, or if in response to a security threat or other risk to security.
 
@@ -203,7 +204,7 @@ Customer’s Affiliates are authorized to use the Products in accordance with th
 
 Customer may obtain additional Subscription Licenses under this Agreement by submitting a request through the Service or via its sales team. If Customer purchases the additional Subscription Licenses, Customer must pay the then-currently applicable Fees for them, prorated for the balance of the applicable Subscription Term. Upon renewal of Customer’s Subscription Licenses for another Subscription Term, the Block Protocol will invoice all Subscription Licenses at once on an annual basis unless otherwise specified in an Order Form.
 
-### 3. Professional Services Credits.
+### 3. Professional Services Credits
 
 If Customer uses Professional Services Credits to pay for Professional Services, then upon Customer’s receipt of an SOW, the applicable Professional Services Credits will be deducted from Customer’s Professional Services Credits balance. Customer is responsible for ensuring that its purchase order issued to the Block Protocol for the Professional Services reflects the pricing set forth in the SOW. If there is any difference in pricing listed in the SOW and the pricing listed in Customer’s purchase order, the pricing in the SOW will control. The Parties agree that SOWs payable via Professional Services Credits do not have to be signed by either Party to be valid and enforceable. All Professional Services Credits must be used within the time set forth in the Order Form or will automatically be canceled and are non-refundable. Customer may not apply Professional Services Credits to travel and lodging expenses, which must be invoiced separately.
 
@@ -223,7 +224,7 @@ Either Party may terminate an Order Form (if applicable) or this Agreement, with
 
 ### 3. Termination for Material Breach
 
-Either Party may terminate this Agreement immediately upon notice if the other Party breaches a material obligation under this Agreement and fails to cure the breach within thirty (30) days from the date it receives notification.  The Block Protocol may terminate this Agreement if Customer's Account has been suspended for more than 90 days.
+Either Party may terminate this Agreement immediately upon notice if the other Party breaches a material obligation under this Agreement and fails to cure the breach within thirty (30) days from the date it receives notification. The Block Protocol may terminate this Agreement if Customer's Account has been suspended for more than 90 days.
 
 ### 4. Effect of Termination
 
