--- a/apps/site/src/_pages/legal/acceptable-use/0_index.mdx
+++ b/apps/site/src/_pages/legal/acceptable-use/0_index.mdx
@@ -11,7 +11,6 @@ topics:
   - Legal
 ---
 
-
 **Short version:** _We host a wide variety of collaborative projects from all over the world, and that collaboration only works when our users are able to work together in good faith. While using the Service, you must comply with our Acceptable Use Policies, which include some restrictions on content and conduct on the Block Protocol related to user safety, intellectual property, privacy, authenticity, and other limitations. In short, be excellent to each other._
 
 Capitalized terms used but not defined in these Acceptable Use Policies have the meanings assigned to them in our [Terms of Service](/legal/terms), [Corporate Terms of Service](/legal/terms-corporate), and [Privacy Statement](/legal/privacy). For customers subject to the [Corporate Terms of Service](/legal/terms-corporate), "you" and "your" refer to "Customer" or "Users". "We", "us", and "our" refer to "Block Protocol".
@@ -28,7 +27,7 @@ We do not allow content or activity on the Block Protocol that:
 - is [obscene](/legal/acceptable-use/obscenity) or relates to sexual exploitation or abuse, including of minors;
 - is [discriminatory or abusive](/legal/acceptable-use/discrimination) toward any individual or group;
 - [harasses or abuses](/legal/acceptable-use/bullying) another individual or group, including our employees, officers, and agents, or other users;
-- [threatens or incites violence](/legal/acceptable-use/violence) toward any individual or group, especially on the basis of who they are; 
+- [threatens or incites violence](/legal/acceptable-use/violence) toward any individual or group, especially on the basis of who they are;
 - [gratuitously depicts or glorifies violence](/legal/acceptable-use/violence), including violent images; or
 - is [false, inaccurate, or intentionally deceptive information](/legal/acceptable-use/veracity) and likely to adversely affect the public interest (including health, safety, election integrity, and civic participation);
 - is libelous, defamatory, or fraudulent;
@@ -50,9 +49,9 @@ We do not allow content or activity on the Block Protocol that:
 
 We do not allow content or activity on the Block Protocol that is:
 
-- **automated excessive bulk activity and coordinated inauthentic activity**, such as 
-   - spamming 
-   - cryptocurrency mining;
+- **automated excessive bulk activity and coordinated inauthentic activity**, such as
+  - spamming
+  - cryptocurrency mining;
 - **bulk distribution** of promotions and advertising prohibited by Block Protocol terms and policies;
 - **inauthentic interactions**, such as fake accounts and automated inauthentic activity;
 - **rank abuse**, such as automated starring or following;
@@ -77,10 +76,10 @@ You will not reproduce, duplicate, copy, sell, resell or exploit any portion of 
 
 You may use information from our Service for the following reasons, regardless of whether the information was scraped, collected through our API, or obtained otherwise:
 
--  **Researchers** may use public, non-personal information from the Service for research purposes, only if any publications resulting from that research are [open access](https://en.wikipedia.org/wiki/Open_access).
--  **Archivists** may use public information from the Service for archival purposes.
+- **Researchers** may use public, non-personal information from the Service for research purposes, only if any publications resulting from that research are [open access](https://en.wikipedia.org/wiki/Open_access).
+- **Archivists** may use public information from the Service for archival purposes.
 
-Scraping refers to extracting information from our Service via an automated process, such as a bot or webcrawler. Scraping does not refer to the collection of information through our API. Please see Section H of our [Terms of Service](/legal/terms) for our API Terms. 
+Scraping refers to extracting information from our Service via an automated process, such as a bot or webcrawler. Scraping does not refer to the collection of information through our API. Please see Section H of our [Terms of Service](/legal/terms) for our API Terms.
 
 You may not use information from the Service (whether scraped, collected through our API, or obtained otherwise) for spamming purposes, including for the purposes of sending unsolicited emails to users or selling personal information, such as to recruiters, headhunters, and job boards.
 
@@ -98,7 +97,7 @@ The Service's bandwidth limitations vary based on the features you use. If we de
 
 ## 10. Advertising on the Block Protocol
 
-**Short version:** *We do not generally prohibit use of the Block Protocol for advertising. However, we expect our users to follow certain limitations, so the Block Protocol does not become a spam haven. No one wants that.*
+**Short version:** _We do not generally prohibit use of the Block Protocol for advertising. However, we expect our users to follow certain limitations, so the Block Protocol does not become a spam haven. No one wants that._
 
 While we understand that you may want to promote your Content by posting supporters' names or logos in your Account, the primary focus of the Content posted in or through your Account to the Service should not be advertising or promotional marketing. This includes Content posted in or through Blocks, Types, Services, Pages, Packages, Projects, repositories, and all other parts of the Service. You may include static images, links, and promotional text in the README documents or project description sections associated with your Account, but they must be related to the project you are hosting on the Block Protocol. You may not advertise in other Users' Accounts, such as by posting monetized or excessive bulk content in issues.
 
@@ -108,8 +107,8 @@ If you decide to post any promotional materials in your Account, you are solely 
 
 ## 11. User Protection
 
-You must not engage in activity that significantly harms other users.   
-  
+You must not engage in activity that significantly harms other users.
+
 We will interpret our policies and resolve disputes in favor of protecting users as a whole.
 
 ---
