--- a/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
+++ b/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
@@ -15,23 +15,25 @@ We offer this private information removal process as an exceptional service only
 
 ## What is Private Information?
 
-For the purposes of this document, “private information” refers to content that (i) should have been kept confidential, *and* (ii) whose public availability poses a specific or targeted security risk to you or your organization. 
+For the purposes of this document, “private information” refers to content that (i) should have been kept confidential, _and_ (ii) whose public availability poses a specific or targeted security risk to you or your organization.
 
 "Security risk" refers to a situation involving exposure to physical danger, identity theft, or increased likelihood of unauthorized access to physical or network facilities.
 
-### Private information removal requests are appropriate for:
+### Private information removal requests are appropriate for
+
 - Access credentials, such as user names combined with passwords, access tokens, or other sensitive secrets that can grant access to your organization's server, network, or domain.
 - AWS tokens and other similar access credentials that grant access to a third party on your behalf. You must be able to show that the token does belong to you.
-- Documentation (such as network diagrams or architecture) that poses a specific security risk for an organization. 
+- Documentation (such as network diagrams or architecture) that poses a specific security risk for an organization.
 - [Information](/legal/acceptable-use/doxxing) related to, and posing a security risk to, you as an individual (such as social security numbers or other government identification numbers).
 
-### Private information removal requests are _not_ appropriate for:
-- **Internal server names, IP addresses, and URLs, on their own.** You must be able to show that their use in a particular file or piece of code poses a security threat.  The [National Institute of Standards and Technology](https://en.wikipedia.org/wiki/National_Institute_of_Standards_and_Technology) explicitly advises against relying on "security through obscurity".
+### Private information removal requests are _not_ appropriate for
+
+- **Internal server names, IP addresses, and URLs, on their own.** You must be able to show that their use in a particular file or piece of code poses a security threat. The [National Institute of Standards and Technology](https://en.wikipedia.org/wiki/National_Institute_of_Standards_and_Technology) explicitly advises against relying on "security through obscurity".
 - **Mere mentions of your company's identity, name, brand, domain name, or other references to your company in files on the Block Protocol.** You must be able to articulate why a use of your company's identity is a threat to your company's security posture. See the [Block Protcool Impersonation Policy](/legal/acceptable-use/impersonation) and [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints) for more information.
 - **Entire files or projects** that do not pose a specific security risk, but you believe are otherwise objectionable.
 - **Requests to remove content that may infringe your or your organization's copyright rights.** If you have questions about how the Block Protocol handles copyright-related matters or would like to report potentially infringing content, please review the [HASH Copyright Materials (DMCA) Policy](https://hash.ai/legal/copyright) which governs the Block Protocol website, in addition to all other HASH websites. The private information removal process is generally _not intended_ for the removal of full files or repositories — only for the specific pieces of private information in those files. While there may be cases where files are filled entirely with private information, you must justify the security risk for the removal of such files, and this may increase the time required to process your request.
 - **Trademark disputes.** If you have questions about how the Block Protocol handles trademark-related matters or would like to report content containing your organization's trade or service marks, please review the [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints).
-- **Privacy complaints.** If you wish to access, transfer, change, or delete your personal information on the Block Protocol, please contact us via [our Support website](/contact). 
+- **Privacy complaints.** If you wish to access, transfer, change, or delete your personal information on the Block Protocol, please contact us via [our Support website](/contact).
 - **Content governed by our [Community Guidelines](/legal/community) and [Acceptable Use](/legal/acceptable-use) policies**, such as [malware](/legal/acceptable-use/malware) or general-purpose tools. If you have questions about our Community Guidelines or believe that content on the Block Protocol might violate our guidelines, you can [contact us](/contact).
 
 ## Things to Know
@@ -40,27 +42,27 @@ For the purposes of this document, “private information” refers to content t
 
 **No Bots.** You should have a trained professional evaluate the facts of every request you send. If you're outsourcing your efforts to a third party, make sure you know how they operate, and make sure they are not using automated bots to submit complaints in bulk. These complaints often include data that does not pose any security threats, and they do not include sufficient explanations, requiring additional back-and-forth and resulting in delays, even when the complaint is valid.
 
-**Send In The Correct Request.** As noted above, we offer this private information removal process as an exceptional service only for high-risk content. We are not able to use this process to remove other kinds of content, such as potentially infringing content, and we are not able to process any other kinds of removal requests simultaneously while processing private information removal requests. We will be able to help you more quickly if you send in your private information removal requests separately from any requests to remove potentially infringing content. If you are unsure whether your request involves only private information or also involves other legal matters, please consult legal counsel. 
+**Send In The Correct Request.** As noted above, we offer this private information removal process as an exceptional service only for high-risk content. We are not able to use this process to remove other kinds of content, such as potentially infringing content, and we are not able to process any other kinds of removal requests simultaneously while processing private information removal requests. We will be able to help you more quickly if you send in your private information removal requests separately from any requests to remove potentially infringing content. If you are unsure whether your request involves only private information or also involves other legal matters, please consult legal counsel.
 
 **Processing Time.** While we do process private information removal requests as quickly as possible, due to the volume of requests we process, it may take some time for your request to be reviewed. Additional requests, or multiple requests from additional points of contact, may result in delays.
 
 ## How Does This Actually Work?
 
-1. **Complainant Investigates.** It is up to the requesting party to conduct their own investigation and to provide us with the [details we require](#your-request-must-include) — most importantly, an explanation of how the data poses a security risk. The Block Protocol is not in a position to search for or make initial determinations about private information on any individual's or organization's behalf.
+1.  **Complainant Investigates.** It is up to the requesting party to conduct their own investigation and to provide us with the [details we require](#your-request-must-include) — most importantly, an explanation of how the data poses a security risk. The Block Protocol is not in a position to search for or make initial determinations about private information on any individual's or organization's behalf.
 
-2. **Complainant Sends a Private Information Removal Request.** After conducting an investigation, the complainant prepares and [sends a private information removal request](#sending-a-private-information-removal-request) to the Block Protocol. If the request is not sufficiently detailed to demonstrate the security risk and for the Block Protocol to locate the data, we will reply and ask for more information.
+2.  **Complainant Sends a Private Information Removal Request.** After conducting an investigation, the complainant prepares and [sends a private information removal request](#sending-a-private-information-removal-request) to the Block Protocol. If the request is not sufficiently detailed to demonstrate the security risk and for the Block Protocol to locate the data, we will reply and ask for more information.
 
-3. **The Block Protocol Asks User to Make Changes.** In most cases, we will contact the user who created the project and give them an opportunity to delete or modify the private information specified in the request or to dispute the claim.
+3.  **The Block Protocol Asks User to Make Changes.** In most cases, we will contact the user who created the project and give them an opportunity to delete or modify the private information specified in the request or to dispute the claim.
 
-4. **User Notifies the Block Protocol of Changes.** If the user chooses to make the specified changes, they must tell us so within the window of time they've been allowed. If they don't, we will disable the project. If the user notifies us that they made changes, we will verify that the changes have been made and notify the complainant.
+4.  **User Notifies the Block Protocol of Changes.** If the user chooses to make the specified changes, they must tell us so within the window of time they've been allowed. If they don't, we will disable the project. If the user notifies us that they made changes, we will verify that the changes have been made and notify the complainant.
 
-  OR
+OR
 
-5. **User May Dispute the Request.** If a user believes the content in question is not private information subject to this Policy, they may dispute it. If they do, we will generally leave it up to the complainant to contact the user and work things out with them directly, within reason.
+5.  **User May Dispute the Request.** If a user believes the content in question is not private information subject to this Policy, they may dispute it. If they do, we will generally leave it up to the complainant to contact the user and work things out with them directly, within reason.
 
-6. **Complainant Reviews Changes.** If the user makes changes, the complainant must review them. If the changes are insufficient, the complainant must provide the Block Protocol with details explaining why. The Block Protocol may disable the project or give the user an additional chance to make the changes.
+6.  **Complainant Reviews Changes.** If the user makes changes, the complainant must review them. If the changes are insufficient, the complainant must provide the Block Protocol with details explaining why. The Block Protocol may disable the project or give the user an additional chance to make the changes.
 
-7. **User May Request an Additional Window to Make Changes.** If the user missed their opportunity to remove the private information specified in the notice, we may allow them an additional window of approximately 1 business day, upon request, to make those changes. In that event, the Block Protocol will notify the complainant.
+7.  **User May Request an Additional Window to Make Changes.** If the user missed their opportunity to remove the private information specified in the notice, we may allow them an additional window of approximately 1 business day, upon request, to make those changes. In that event, the Block Protocol will notify the complainant.
 
 ### What About Forks? (or What's a Fork?)
 
@@ -76,13 +78,13 @@ If at the time that you submitted your notice, you identified all existing forks
 
 These guidelines are designed to make the processing of requests to remove private information as straightforward as possible.
 
-### Your Request Must Include:
+### Your Request Must Include
 
-1. A working, clickable link to each file within a project containing private information. (Note that we're not able to work from search results, examples, or screenshots.)
-1. Specific line numbers within each file containing the private information.
-1. A brief description of how each item you've identified poses a security risk to you or your organization. ***It is important that you provide an explanation of how the data poses a security risk beyond merely stating that it does.***
-1. If you are a third party acting as an agent for an organization facing a security risk, include a statement that you have a legal right to act on behalf of that organization.
-1. **Optional:** Let us know if your request is particularly urgent, and why. We respond to all private information removal requests as quickly as possible. However, if this request is especially time-sensitive, such as a very recent credential exposure, please explain why.
+1.  A working, clickable link to each file within a project containing private information. (Note that we're not able to work from search results, examples, or screenshots.)
+1.  Specific line numbers within each file containing the private information.
+1.  A brief description of how each item you've identified poses a security risk to you or your organization. **_It is important that you provide an explanation of how the data poses a security risk beyond merely stating that it does._**
+1.  If you are a third party acting as an agent for an organization facing a security risk, include a statement that you have a legal right to act on behalf of that organization.
+1.  **Optional:** Let us know if your request is particularly urgent, and why. We respond to all private information removal requests as quickly as possible. However, if this request is especially time-sensitive, such as a very recent credential exposure, please explain why.
 
 ## How to Submit Your Request
 
