Rename nested section appropriately

--- a/apps/site/src/_pages/legal/privacy/00_index.mdx
+++ b/apps/site/src/_pages/legal/privacy/00_index.mdx
@@ -26,19 +26,19 @@ We use your personal information as this Privacy Statement describes. No matter 
 
 ## Summary
 
-| Section                                                                                                                     | What can you find there?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
-| --------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Who is responsible for the processing of your information](#who-is-responsible-for-the-processing-of-your-information)     | Subject to limited exceptions, _HASH, Inc._ is the controller and entity responsible for the processing of your personal data in connection with the Website or Service if you are in North America. For individuals outside North America the data controller is _HASH, Ltd._                                                                                                                                                                                                                                                                                                                                                  |
-| [What information Block Protocol collects](#what-information-block-protocol-collects)                                       | Block Protocol collects information directly from you for your registration, payment, transactions, and user profile. We also automatically collect from you your usage information, cookies, and device information, subject, where necessary, to your consent. Block Protocol may also collect personal data from third parties. We only collect the minimum amount of personal data necessary to provide innovative services and personalized experiences, unless you choose to provide more.                                                                                                                                |
-| [How Block Protocol uses your information](#how-block-protocol-uses-your-information)                                       | In this section, we describe the ways in which we use your information, including to provide you the Service, to communicate with you, for security and compliance purposes, and to improve our Website or Service or develop new features and functionality of our Website or Service. We also describe the legal basis upon which we process your information, where legally required.                                                                                                                                                                                                                                        |
-| [How we share the information we collect](#how-we-share-the-information-we-collect)                                         | We may share your information with third parties under one of the following circumstances: with your consent, with our service providers, for security purposes, to comply with our legal obligations, or when there is a change of control or sale of corporate entities or business units. We do not sell your personal information and we do not display advertising on the Block Protocol.                                                                                                                                                                                                                                  |
-| [Your choices regarding our processing of your personal data](#your-choices-regarding-our-processing-of-your-personal-data) | We provide ways for you to access, alter, or delete your personal information.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-| [Cookies and tracking technologies](#cookies-and-tracking-technologies)                                                     | Except for some of the cookies used on our Enterprise Marketing Pages, we only use strictly necessary cookies to provide, secure, and improve our Website or Service or develop new features and functionality of our Website or Service.<br><br>As described below, we may use non-essential cookies on certain pages of our website to support our enterprise marketing efforts and market our products and services to enterprise customers, for example on hash.ai/resources (collectively “Enterprise Marketing Pages”).<br><br>We offer a [page](/legal/privacy/cookies) that makes all uses of cookies very transparent. |
-| [How Block Protocol secures your information](#how-block-protocol-secures-your-information)                                 | We take all measures reasonably necessary to protect the confidentiality, integrity, and availability of your personal data on the Block Protocol service and to protect the resilience of our servers.                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| [Communication preferences](#communication-preferences)                                                                     | We communicate with you by email. You can control the way we contact you in your account settings, or by contacting us.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
-| [Resolving complaints](#resolving-complaints)                                                                               | In the unlikely event that we are unable to resolve a privacy concern quickly and thoroughly, we provide a path of dispute resolution.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
-| [Changes to our Privacy Statement](#changes-to-our-privacy-statement)                                                       | We notify you of material changes to this Privacy Statement 30 days before any such changes become effective. You may also track changes in our public [blockprotocol](https://github.com/blockprotocol/blockprotocol) Git repository.                                                                                                                                                                                                                                                                                                                                                                                          |
-| [Contacting Block Protocol](#contacting-block-protocol)                                                                     | Please feel free to contact us if you have questions about our Privacy Statement.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
+| Section                                                                                                                     | What can you find there?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+| --------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Who is responsible for the processing of your information](#who-is-responsible-for-the-processing-of-your-information)     | Subject to limited exceptions, _HASH, Inc._ is the controller and entity responsible for the processing of your personal data in connection with the Website or Service if you are in North America. For individuals outside North America the data controller is _HASH, Ltd._                                                                                                                                                                                                                                                                                                                                                          |
+| [What information Block Protocol collects](#what-information-block-protocol-collects)                                       | Block Protocol collects information directly from you for your registration, payment, transactions, and user profile. We also automatically collect from you your usage information, cookies, and device information, subject, where necessary, to your consent. Block Protocol may also collect personal data from third parties. We only collect the minimum amount of personal data necessary to provide innovative services and personalized experiences, unless you choose to provide more.                                                                                                                                        |
+| [How Block Protocol uses your information](#how-block-protocol-uses-your-information)                                       | In this section, we describe the ways in which we use your information, including to provide you the Service, to communicate with you, for security and compliance purposes, and to improve our Website or Service or develop new features and functionality of our Website or Service. We also describe the legal basis upon which we process your information, where legally required.                                                                                                                                                                                                                                                |
+| [How we share the information we collect](#how-we-share-the-information-we-collect)                                         | We may share your information with third parties under one of the following circumstances: with your consent, with our service providers, for security purposes, to comply with our legal obligations, or when there is a change of control or sale of corporate entities or business units. We do not sell your personal information and we do not display advertising on the Block Protocol.                                                                                                                                                                                                                                          |
+| [Your choices regarding our processing of your personal data](#your-choices-regarding-our-processing-of-your-personal-data) | We provide ways for you to access, alter, or delete your personal information.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+| [Cookies and tracking technologies](#cookies-and-tracking-technologies)                                                     | Except for some of the cookies used on our Enterprise Marketing Pages, we only use strictly necessary cookies to provide, secure, and improve our Website or Service or develop new features and functionality of our Website or Service.<br /><br />As described below, we may use non-essential cookies on certain pages of our website to support our enterprise marketing efforts and market our products and services to enterprise customers, for example on hash.ai/resources (collectively “Enterprise Marketing Pages”).<br /><br />We offer a [page](/legal/privacy/cookies) that makes all uses of cookies very transparent. |
+| [How Block Protocol secures your information](#how-block-protocol-secures-your-information)                                 | We take all measures reasonably necessary to protect the confidentiality, integrity, and availability of your personal data on the Block Protocol service and to protect the resilience of our servers.                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| [Communication preferences](#communication-preferences)                                                                     | We communicate with you by email. You can control the way we contact you in your account settings, or by contacting us.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| [Resolving complaints](#resolving-complaints)                                                                               | In the unlikely event that we are unable to resolve a privacy concern quickly and thoroughly, we provide a path of dispute resolution.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| [Changes to our Privacy Statement](#changes-to-our-privacy-statement)                                                       | We notify you of material changes to this Privacy Statement 30 days before any such changes become effective. You may also track changes in our public [blockprotocol](https://github.com/blockprotocol/blockprotocol) Git repository.                                                                                                                                                                                                                                                                                                                                                                                                  |
+| [Contacting Block Protocol](#contacting-block-protocol)                                                                     | Please feel free to contact us if you have questions about our Privacy Statement.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
 
 ## Block Protocol Privacy Statement
 
