--- a/apps/site/src/_pages/legal/privacy/3_cookies.mdx
+++ b/apps/site/src/_pages/legal/privacy/3_cookies.mdx
@@ -19,12 +19,12 @@ Since the number and names of cookies may change, the table below may be updated
 
 ## Cookie details
 
-<!-- Cookie table -->
+{`Cookie table`}
 
 ## Manage your cookie preferences
 
 You can change your preference about non-essential cookies at any time on this page.
 
-<!-- Cookie preference selection table -->
+{`Cookie preference selection table`}
 
 If you have any questions, cannot see the preference selection interface above, or experience any other difficulty in modifying your cookie preferences, please [contact us](/contact).
